Add bespoke secondary, for notes

--- a/src/index.jade
+++ b/src/index.jade
@@ -8,6 +8,7 @@ html
     // build:css styles/styles.css
     //- Check out 'src/bower_components/prism/themes/' for available themes
     link(rel='stylesheet', type='text/css', href='bower_components/prism/themes/prism-tomorrow.css')
+    link(rel='stylesheet', type='text/css', href='styles/defaults.css')
     link(rel='stylesheet', type='text/css', href='styles/main.css')
     // endbuild
 
@@ -17,6 +18,9 @@ html
 
       section
         h1 Building resilient infrastructure with CouchDB
+        aside
+          h2 An aside!
+          p with some notes
 
       section
         h2 Keyboard Interaction
@@ -82,6 +86,9 @@ html
     script(src='bower_components/bespoke-scale/dist/bespoke-scale.min.js')
     script(src='bower_components/bespoke-hash/dist/bespoke-hash.min.js')
     script(src='bower_components/bespoke-state/dist/bespoke-state.min.js')
+    script(src='bower_components/bespoke-convenient/dist/bespoke-convenient.js')
+    script(src='bower_components/bespoke-indexfinger/dist/bespoke-indexfinger.js')
+    script(src='bower_components/bespoke-secondary/dist/bespoke-secondary.js')
     script(src='bower_components/prism/prism.js')
     script(src='scripts/main.js')
     // endbuild
