Styling tweaks to intro slide

--- a/src/index.jade
+++ b/src/index.jade
@@ -17,7 +17,7 @@ html
     article
 
       section
-        h1.title Building resilient infrastructure with CouchDB
+        h1.title Building resilient infrastructure with <span class="couchdb">CouchDB</span>
         address.vcard
           div.author.fn Tim Perry
           div.note.bio
@@ -32,8 +32,10 @@ html
             li
               a.url(href='http://github.com/pimterry',rel="me") github.com/pimterry
         aside
-          h2 An aside!
-          p with some notes
+          ul
+            li Tim Perry
+            li Softwire. London. Bespoke dev on a huge variety of projects
+            li Softwire are hiring!
 
     // build:js scripts/scripts.js
     script(src='bower_components/bespoke.js/dist/bespoke.min.js')
