Drop silly concurrency styles

--- a/src/index.jade
+++ b/src/index.jade
@@ -104,7 +104,7 @@ html
             li Revision number is automatic
 
       section
-        h2.full-slide.concurrent
+        h2.full-slide
           | Multiversion
           | Concurrency
           | Control
