--- a/src/styles/main.styl
+++ b/src/styles/main.styl
@@ -76,3 +76,16 @@ address {
 .couchdb-logo-big {
   width: 60%;
 }
+
+.sideBySide {
+  flex-direction: row;
+  width: 100%;
+
+  pre {
+    width: 48%;
+    margin: 0.5em 0.4em;
+    font-size: 52%;
+    float: left;
+    display: inline-block;
+  }
+}
