--- a/src/styles/main.styl
+++ b/src/styles/main.styl
@@ -29,6 +29,11 @@ h2.full-slide {
   text-align: left;
 }
 
+ul {
+  margin: 10px 0;
+  text-align: left;
+}
+
 address {
   margin-top: 30px;
   float: left;
