--- a/src/styles/main.styl
+++ b/src/styles/main.styl
@@ -1,3 +1,5 @@
+@import url("http://fonts.googleapis.com/css?family=Crete+Round");
+
 .bespoke-slide {
   background-color: #fff;
   padding: 20px;
@@ -17,6 +19,7 @@
 .title {
   text-align: left;
   font-weight: normal;
+  font-family: 'Crete Round';
 
   .couchdb {
     font-weight: bolder;
@@ -37,7 +40,7 @@ ul {
 address {
   margin-top: 30px;
   float: left;
-  text-align: left;
+  text-align: right;
   width: 100%;
   font-style: normal;
   line-height: 150%
@@ -55,6 +58,10 @@ address {
     &:hover {
       font-style: underline;
     }
+  }
+
+  .urls {
+    padding-top: 26px;
   }
 
   ul {
