--- a/src/index.jade
+++ b/src/index.jade
@@ -34,11 +34,21 @@ html
         aside
           ul
             li Tim Perry
-            li Softwire. London. Bespoke dev on a huge variety of projects
-            li Softwire are hiring!
+            li Talk about CouchDb
 
       section
-        img(src='images/couchdb.svg',class='couchdb-logo-big',alt='CouchDB')
+        img(src='images/softwireLogo.png',class='logo-big',alt='Softwire')
+        aside
+          ul
+            li Who am I: I work for Softwire, London.
+            li Bespoke dev on a huge variety of projects
+            li One of which I want to talk about today
+            li Softwire are hiring!
+            li If you want to do things like this, apply, or talk to me afterwards
+
+
+      section
+        img(src='images/couchdb.svg',class='logo-big',alt='CouchDB')
 
         aside
           ul
@@ -284,6 +294,20 @@ html
 
       section
         h2.full-slide Any questions?
+
+        address.vcard
+          div.author.fn Tim Perry
+          div.note.bio
+            span Tech Lead &amp; Open-Source Champion at 
+            span.org.vcard
+              a.org.fn.url(href='http://softwire.com',rel="group") Softwire
+          ul.urls
+            li
+              a.url(href='http://tim-perry.co.uk',rel="me") tim-perry.co.uk
+            li
+              a.nickname.url(href='http://twitter.com/pimterry',rel="me") @pimterry
+            li
+              a.url(href='http://github.com/pimterry',rel="me") github.com/pimterry
 
     // build:js scripts/scripts.js
     script(src='bower_components/bespoke.js/dist/bespoke.min.js')
