--- a/src/styles/main.styl
+++ b/src/styles/main.styl
@@ -94,10 +94,10 @@ address {
   width: 100%;
 
   pre {
-    width: 48%;
     margin: 0.5em 0.4em;
-    font-size: 52%;
+    font-size: 60%;
     float: left;
     display: inline-block;
+    padding: 15px !important;
   }
 }
