Tweaks to real world example phrasing

--- a/src/index.jade
+++ b/src/index.jade
@@ -219,6 +219,7 @@ html
 
       section
         h2 Real world example
+        h4 (Anonymized)
         ul
           li B2B SaaS product, with strict SLAs
           li Millions of paying daily users
@@ -263,7 +264,7 @@ html
         h2 Real World Improvements
         ul
           li No single point of failure
-          li Scales easily horizontally
+          li Scales horizontally easily
           li Major memory savings
     
       section
