Tweaked notes for opening slides

--- a/src/index.jade
+++ b/src/index.jade
@@ -45,6 +45,7 @@ html
             li One of which I want to talk about today
             li Softwire are hiring!
             li If you want to do things like this, apply, or talk to me afterwards
+            li Not affiliated with CouchDB at all
 
       section
         img(src='images/couchdb.svg',class='logo-big',alt='CouchDB')
@@ -56,6 +57,7 @@ html
             li Apache project
             li Core concept is 'relax'
             li Schema-free, simple to use, hard to break
+            li Lightweight processes, will runnable on mobile, or in a browser
             li Not focusing on CouchDB generally, but some of the basics:
 
       section
@@ -115,6 +117,10 @@ html
           ul
             li Can insert with specific ids, or without
             li Revision number is automatic
+            li Increments on change
+            li Psuedorandom hash
+            li PUT to created specific docs and do updates
+            li POST to created docs with random ids
 
       section
         h2 Replication
