Fleshed out conclusion notes

--- a/src/index.jade
+++ b/src/index.jade
@@ -385,9 +385,30 @@ html
 
       section
         h2 CouchDB is not perfect
+        aside
+          ul 
+            li One or two last points
+            li Critical: you might not want this
+            li Like all NoSQL DBs, it fulfills a niche
+            li Don't assume just because it's NoSQL it's focused on performance
+            li No functionality you might well expect
+            li Arbitrary queries
+            li Sharding
+            li Joins, obviously
+            li Not many tools around for monitoring etc
 
       section
-        h2 But 'always available' is a great superpower
+        h2 But '<em>always</em> available' is a great superpower
+        aside
+          ul
+            li NoSQL really isn't all about big data, it's about better data
+            li Extra features, that enable and simplify powerful products
+            li By moving away from traditional mindset
+            li CouchDB is quite different
+            li Unique phoenix from ashes of traditional SQL
+            li Simplicity makes it easy to build monitoring etc on top
+            li Makes testing and management simple and trivially automatable
+            li Reliability means you can build cool things on the worst of foundations
 
       section
         h2.full-slide Any questions?
