Note that map/reduce is incremental (keynote reference)

--- a/src/index.jade
+++ b/src/index.jade
@@ -153,8 +153,8 @@ html
 
       section
         ul
-          li Map/Reduce
           li Indexed Views
+          li Incremental Map/Reduce
           li ACID (locally)
           li Erlang-based
           li Web UI
