Clarify some details on real-world example

--- a/src/index.jade
+++ b/src/index.jade
@@ -262,6 +262,7 @@ html
           li Frequent loss of connection to datacentres
           li Users can and do roam, worldwide
           li Server failover is always to a different datacenter
+          li Data center network is hub &amp; spoke (through London)
 
       section
         h2 Previous solution
@@ -276,7 +277,7 @@ html
           li Memory usage doesn't scale
           li Network traffic doesn't scale
           li Network and server failures are big problems
-          li RabbitMQ failures are catastrophic problems
+          li Message queue failures are catastrophic problems
 
       section
         h2 CouchDB solution
