--- a/src/index.jade
+++ b/src/index.jade
@@ -303,13 +303,71 @@ html
           li Disk usage
 
       section
-        h2.full-slide Hood.ie
+        h2.full-slide Hoodie
+        h4
+          a(href='http://hood.id') http://hood.ie
 
       section
-        h2.todo Hood.ie
+        h2 Hoodie
+        ul
+          li Web framework
+          li Offline-first
+          li No Backend
 
       section
-        h2.full-slide Why does this work?
+        h2 Hoodie
+        h4 Save data
+        pre
+          code.language-javascript.
+            $('.addTask .submit').click(function () {
+                var desc = $('.addTask .desc').val();
+                hoodie.store.add('task', { desc: desc });
+            });
+        aside
+
+      section
+        h2 Hoodie
+        h4 Handle new data
+        pre
+          code.language-javascript.
+            hoodie.store.on('add:task', function (task) {
+                $('.taskList').append('&lt;li&gt;'+task.desc+'&lt;/li&gt;');
+            });
+        aside
+
+      section
+        h2 Hoodie
+        h4 Log in users
+        pre
+          code.language-javascript.
+            $('.login').click(function () {
+                var username = $(".username").val();
+                var password = $(".password").val();
+
+                hoodie.account.signIn(username, password)
+                              .done(loginSuccessful);
+            });
+        aside
+
+      section
+        h2 Hoodie
+        h4 Architecture
+        img(src='images/hoodie.png',style='width:600px')
+        p (From <a href='http://hood.ie/intro#magic'>http://hood.ie/intro#magic</a>)
+
+
+      section
+        h2 Hoodie
+        pre
+          code.language-javascript.
+            $('.addTask .submit').click(function () {
+                var desc = $('.addTask .desc').val();
+                hoodie.store.add('task', { desc: desc });
+            });
+        aside
+
+      section
+        h2.full-slide Why does any of this work?
 
       section
         h2.full-slide Append-only B-trees
